sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:14: error: value unary_! is not a member of Unit
				if(!echange(j,j+1)){
                                   ^